final changes + for submission